umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_dimethylformamide.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: carbonyl_derivatives
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: DoW
    atoms:
      - "{CHv3}"
      - "{O/2v2}"
      - "{N/1v3}"
      - "{CH3v1}"
      - "{CH3v1}"
    bonds:
      - "="
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: DoW
    atoms:
      - "{CHv3}"
      - "{O/2v2}"
      - "{N/1v3}"
      - "{CH3v1}"
      - "{CH3v1}"
    bonds:
      - "="
      - "-"
      - "-"
      - "-"
